fix(middleware): support JWT token for security
